--- a/004-ft-interface/backend/saadtahir/index.html
+++ b/004-ft-interface/backend/saadtahir/index.html
@@ -6,10 +6,12 @@
 <body>
 
 <h1>Express Server</h1>
+<label id="hello"></label>
 <form method="GET" action="http://localhost:3000">
     <input type="submit" value="Say Hello" />
 </form>
 <br>
+<label id="user"></label>
 <form method="GET" action="http://localhost:3000/user">
     <input type="submit" value="Reveal Author Name" />
 </form>
@@ -23,7 +25,9 @@
 </form>
 <br>
 <form method="POST" action="http://localhost:3000/stx/send">
-    <input type="text" name="user[address]">
+    <label>Amount: <input type="text" name="amount"></label>
+    <label>Recipient: <input type="text" name="recipient"></label>
+    <label>Memo: <input type="text" name="memo"></label>
     <input type="submit" value="Send Stx" />
 </form>
 <br>
@@ -31,8 +35,10 @@
     <input type="submit" value="Get Random Number" />
 </form>
 <br>
-<form method="GET" action="http://localhost:3000/public/goal-score">
-    <input type="submit" value="Goal Score" />
+<form method="POST" action="http://localhost:3000/public/is-goal-scored">
+    <label>Score: <input type="text" name="score"></label>
+    <label>Player: <input type="text" name="player"></label>
+    <input type="submit" value="Is Goal Scored" />
 </form>
 <br>
 
