The server now serves the file instead of opening index.html

--- a/004-ft-interface/backend/saadtahir/index.html
+++ b/004-ft-interface/backend/saadtahir/index.html
@@ -4,7 +4,7 @@
 
 <h1>Express Server</h1>
 <label id="hello"></label>
-<form method="GET" action="http://localhost:3000">
+<form method="GET" action="http://localhost:3000/hello">
     <input type="submit" value="Say Hello" />
 </form>
 <br>
