--- a/006-dao/dao-projects/saadtahir/test-coverage/contracts/dao.clar.func.html
+++ b/006-dao/dao-projects/saadtahir/test-coverage/contracts/dao.clar.func.html
@@ -31,13 +31,13 @@
             <td class="headerValue">coverage.lcov</td>
             <td></td>
             <td class="headerItem">Lines:</td>
-            <td class="headerCovTableEntry">134</td>
-            <td class="headerCovTableEntry">141</td>
-            <td class="headerCovTableEntryHi">95.0 %</td>
+            <td class="headerCovTableEntry">130</td>
+            <td class="headerCovTableEntry">137</td>
+            <td class="headerCovTableEntryHi">94.9 %</td>
           </tr>
           <tr>
             <td class="headerItem">Date:</td>
-            <td class="headerValue">2021-10-29 15:50:33</td>
+            <td class="headerValue">2021-11-02 12:49:50</td>
             <td></td>
             <td class="headerItem">Functions:</td>
             <td class="headerCovTableEntry">24</td>
@@ -60,104 +60,104 @@
       <td width="20%" class="tableHead">Hit count <span class="tableHeadSort"><a href="dao.clar.func-sort-c.html"><img src="../updown.png" width=10 height=14 alt="Sort by hit count" title="Sort by hit count" border=0></a></span></td>
     </tr>
     <tr>
-              <td class="coverFn"><a href="dao.clar.gcov.html#116">add-dao</a></td>
-              <td class="coverFnHi">2</td>
-            </tr>
-    <tr>
-              <td class="coverFn"><a href="dao.clar.gcov.html#288">add-proposal-on-block-height</a></td>
-              <td class="coverFnHi">10</td>
-            </tr>
-    <tr>
-              <td class="coverFn"><a href="dao.clar.gcov.html#292">add-to-processed-proposals</a></td>
-              <td class="coverFnHi">4</td>
-            </tr>
-    <tr>
-              <td class="coverFn"><a href="dao.clar.gcov.html#171">cast-vote</a></td>
-              <td class="coverFnHi">12</td>
-            </tr>
-    <tr>
-              <td class="coverFn"><a href="dao.clar.gcov.html#105">convert</a></td>
-              <td class="coverFnHi">1</td>
-            </tr>
-    <tr>
-              <td class="coverFn"><a href="dao.clar.gcov.html#215">evaluate-processed-proposal-votes</a></td>
+              <td class="coverFn"><a href="dao.clar.gcov.html#118">add-dao</a></td>
               <td class="coverFnHi">3</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="dao.clar.gcov.html#247">execute-proposal</a></td>
-              <td class="coverFnHi">2</td>
-            </tr>
-    <tr>
-              <td class="coverFn"><a href="dao.clar.gcov.html#230">find-winning-proposal</a></td>
-              <td class="coverFnHi">2</td>
-            </tr>
-    <tr>
-              <td class="coverFn"><a href="dao.clar.gcov.html#55">get-member</a></td>
-              <td class="coverFnHi">38</td>
-            </tr>
-    <tr>
-              <td class="coverFn"><a href="dao.clar.gcov.html#51">get-member-registration-cost-in-dao</a></td>
-              <td class="coverFnLo">0</td>
-            </tr>
-    <tr>
-              <td class="coverFn"><a href="dao.clar.gcov.html#75">get-processed-proposals</a></td>
-              <td class="coverFnHi">20</td>
-            </tr>
-    <tr>
-              <td class="coverFn"><a href="dao.clar.gcov.html#59">get-proposal</a></td>
-              <td class="coverFnHi">8</td>
-            </tr>
-    <tr>
-              <td class="coverFn"><a href="dao.clar.gcov.html#83">get-proposal-in-process</a></td>
-              <td class="coverFnHi">5</td>
-            </tr>
-    <tr>
-              <td class="coverFn"><a href="dao.clar.gcov.html#87">get-proposal-votes</a></td>
-              <td class="coverFnHi">13</td>
-            </tr>
-    <tr>
-              <td class="coverFn"><a href="dao.clar.gcov.html#71">get-proposals-on-block-height</a></td>
-              <td class="coverFnHi">10</td>
-            </tr>
-    <tr>
-              <td class="coverFn"><a href="dao.clar.gcov.html#47">get-time-for-proposal</a></td>
-              <td class="coverFnHi">12</td>
-            </tr>
-    <tr>
-              <td class="coverFn"><a href="dao.clar.gcov.html#63">get-vote-by-member</a></td>
-              <td class="coverFnHi">9</td>
-            </tr>
-    <tr>
-              <td class="coverFn"><a href="dao.clar.gcov.html#67">get-votes-on-proposal</a></td>
+              <td class="coverFn"><a href="dao.clar.gcov.html#281">add-proposal-on-block-height</a></td>
               <td class="coverFnHi">11</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="dao.clar.gcov.html#196">process-proposal</a></td>
+              <td class="coverFn"><a href="dao.clar.gcov.html#285">add-to-processed-proposals</a></td>
+              <td class="coverFnHi">5</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="dao.clar.gcov.html#173">cast-vote</a></td>
+              <td class="coverFnHi">13</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="dao.clar.gcov.html#107">convert-dao-to-stx</a></td>
+              <td class="coverFnHi">1</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="dao.clar.gcov.html#217">evaluate-processed-proposal-votes</a></td>
+              <td class="coverFnHi">4</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="dao.clar.gcov.html#249">execute-proposal</a></td>
+              <td class="coverFnHi">3</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="dao.clar.gcov.html#232">find-winning-proposal</a></td>
+              <td class="coverFnHi">3</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="dao.clar.gcov.html#57">get-member</a></td>
+              <td class="coverFnHi">41</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="dao.clar.gcov.html#53">get-member-registration-cost-in-dao</a></td>
+              <td class="coverFnLo">0</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="dao.clar.gcov.html#77">get-processed-proposals</a></td>
+              <td class="coverFnHi">24</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="dao.clar.gcov.html#61">get-proposal</a></td>
+              <td class="coverFnHi">11</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="dao.clar.gcov.html#85">get-proposal-in-process</a></td>
               <td class="coverFnHi">7</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="dao.clar.gcov.html#144">propose-proposal</a></td>
-              <td class="coverFnHi">12</td>
-            </tr>
-    <tr>
-              <td class="coverFn"><a href="dao.clar.gcov.html#132">register-member</a></td>
+              <td class="coverFn"><a href="dao.clar.gcov.html#89">get-proposal-votes</a></td>
               <td class="coverFnHi">15</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="dao.clar.gcov.html#79">search-processed-proposal</a></td>
+              <td class="coverFn"><a href="dao.clar.gcov.html#73">get-proposals-on-block-height</a></td>
+              <td class="coverFnHi">11</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="dao.clar.gcov.html#49">get-time-for-proposal</a></td>
+              <td class="coverFnHi">13</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="dao.clar.gcov.html#65">get-vote-by-member</a></td>
+              <td class="coverFnHi">10</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="dao.clar.gcov.html#69">get-votes-on-proposal</a></td>
+              <td class="coverFnHi">12</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="dao.clar.gcov.html#198">process-proposal</a></td>
+              <td class="coverFnHi">9</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="dao.clar.gcov.html#146">propose-proposal</a></td>
+              <td class="coverFnHi">13</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="dao.clar.gcov.html#134">register-member</a></td>
               <td class="coverFnHi">16</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="dao.clar.gcov.html#98">set-member-registration-cost-in-dao</a></td>
-              <td class="coverFnHi">1</td>
-            </tr>
-    <tr>
-              <td class="coverFn"><a href="dao.clar.gcov.html#91">set-time-for-proposal</a></td>
-              <td class="coverFnHi">1</td>
-            </tr>
-    <tr>
-              <td class="coverFn"><a href="dao.clar.gcov.html#275">transfer-dao-to-contract</a></td>
+              <td class="coverFn"><a href="dao.clar.gcov.html#81">search-processed-proposal</a></td>
               <td class="coverFnHi">19</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="dao.clar.gcov.html#100">set-member-registration-cost-in-dao</a></td>
+              <td class="coverFnHi">1</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="dao.clar.gcov.html#93">set-time-for-proposal</a></td>
+              <td class="coverFnHi">1</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="dao.clar.gcov.html#268">transfer-dao-to-contract</a></td>
+              <td class="coverFnHi">21</td>
             </tr>
   </table>
   <br>
